# dispglonass

./: 1212  1212.pub  CMakeLists.txt  getacts.cpp  getacts.h  luninareport.h  main.cpp  mainmenu.cpp  mainmenu.h  mainmenu.ui  makeact.cpp  makeact.h  makeact.ui  myGitKey  myGitKey.pub  settings.ui  sshgit  sshgit.pub
core/: mainmenu.cpp  mainmenu.h  mainmenu.ui
modules/: buildreporttable.cpp  buildreporttable.h  getacts.cpp  getacts.h  luninareport.cpp  luninareport.h  luninareport.ui  makeact.cpp  makeact.h  makeact.ui  readtransportworktable.cpp  readtransportworktable.h
python_scripts/: credentials.json  data.json  excel_reader.py  google_api_user.py  main.py  requirements.txt  routes.xlsx  token.json
